[package]
name = "orderbook-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
dashmap = "6.0"
ordered-float = "4.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.7"
anyhow = "1.0"
chrono = "0.4"
tokio-util = { version = "0.7", features = ["compat"] }
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
tokio-stream = { version = "0.1", features = ["net", "sync"] }
smallvec = "1.13"
memmap2 = "0.9"
num_cpus = "1.16"
core_affinity = "0.8"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "orderbook-service"
path = "src/main.rs"

[[bin]]
name = "orderbook-service-optimized"
path = "src/main_optimized.rs"

[[bin]]
name = "orderbook-service-realtime"
path = "src/main_realtime.rs"

[[example]]
name = "test_client"
path = "examples/test_client.rs"

[lib]
name = "orderbook_service"
path = "src/lib.rs"